--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -22,54 +22,54 @@
 <!-- Navigation -->
 {% block navBar %}
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-        <div class="container">
-            <a class="navbar-brand" href="{{ path('home_index') }}">Mon blog</a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                    data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                Menu
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('home_index') }}">Home</a>
-                    </li>
-                    {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                        <li class="nav-item">
-                            <!-- Admin panel -->
-                            <a class="nav-link" href="{{ path('post_index') }}">Gestionnaire</a>
-                        </li>
-                    {% else %}
-                        <input type="hidden" value="Gestionnaire">
-                    {% endif %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('about_index') }}">A propos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('contact') }}">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                            <a class="link" href="{{ path('security_logout') }}">Se déconnecter</a>
-                        {% endif %}
-                    </li>
-                </ul>
-            </div>
+    <div class="container">
+    <a class="navbar-brand" href="{{ path('home_index') }}">Mon blog</a>
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+            data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+            aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('home_index') }}">Home</a>
+            </li>
+            {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                <li class="nav-item">
+                    <!-- Admin panel -->
+                    <a class="nav-link" href="{{ path('post_index') }}">Gestionnaire</a>
+                </li>
+            {% else %}
+                <input type="hidden" value="Gestionnaire">
+            {% endif %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('about_index') }}">A propos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('contact') }}">Contact</a>
+            </li>
+            <li class="nav-item">
+                {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                    <a class="link" href="{{ path('security_logout') }}">Se déconnecter</a>
+                {% endif %}
+            </li>
+        </ul>
+    </div>
 
-        </div>
+    </div>
     </nav>
 {% endblock %}
 
 <!-- Page Header -->
 <header class="masthead" style="background-image: url('{{ asset('/img/about-bg.jpg') }}')">
     <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
                 <div class="site-heading">
-                    <h1>Je crée mon blog en PHP</h1>
-                    <span class="subheading">La programmation au service de votre communication</span>
+                <h1>Je crée mon blog en PHP</h1>
+                <span class="subheading">La programmation au service de votre communication</span>
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
                 <div class="col-12">
                     <div class="col-3 offset-3 float-left text-right">
                         <a href="https://twitter.com/intent/follow?original_referer=http%3A%2F%2Fwww.blogsymfony.fr%2Fapp_dev.php%2Fcontact%2F&amp;ref_src=twsrc%5Etfw&amp;region=follow_link&amp;screen_name=Gloril7&amp;tw_p=followbutton" target="_blank"
-                           aria-label="Follow @me on Twitter">
+                           rel="noopener" aria-label="Follow @me on Twitter">
                             <span class="fa-stack fa-2x">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
@@ -97,7 +97,7 @@
                     </div>
                     <div class="col-3 float-left">
                         <a href="https://github.com/Fossette7/blogSymfony" target="_blank"
-                           aria-label="Follow @me on GitHub">
+                           rel="noopener" aria-label="Follow @me on GitHub">
                             <span class="fa-stack fa-2x">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-github fa-stack-1x fa-inverse"></i>
