--- a/app/Resources/views/about/index.html.twig
+++ b/app/Resources/views/about/index.html.twig
@@ -10,9 +10,9 @@
                 <div class="col-sm-3">
                     <div class="row">
                         <img src="{{ asset('img/Reybeka_profil_2.png') }}" alt="photo Reybeka Peyrat"/>
-                        <div class="col-sm-3"><button type="button" class="btn btn-secondary">
-                        <a class="pdf" href="{{ asset('img/CV-RP.pdf') }}" target="_blank">
-                        </a>CV</button></div>
+                        <div class="col-sm-3"><a type="button" class="pdf btn btn-secondary"
+                        href="{{ asset('img/CV-RP.pdf') }}" target="_blank">
+                        CV</a></div>
                     </div>
                 </div>
 
