--- a/app/Resources/views/comment/index.html.twig
+++ b/app/Resources/views/comment/index.html.twig
@@ -9,6 +9,13 @@
             {% for comment in comments %}
                 <div class="comment-preview">
                     <h2><a href="{{ path('comment_show', { 'id': comment.id }) }}">{{ comment.author }}</a></h2>
+                    {% if comment.approved == true %}
+                        <hr>
+                        <span class="badge badge-success">En ligne</span>
+                    {% else %}
+                        <hr>
+                        <span class="badge badge-secondary">Hors ligne</span>
+                    {% endif %}
                     <p>{{ comment.content }}</p>
                     <a class="btn" href="{{ path('comment_show', { 'id': comment.id }) }}">Voir</a>
 
