--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="{{ asset('css/all.min.css') }}"/>
     <link rel="stylesheet" href="{{ asset('css/clean-blog.css') }}"/>
 </head>
-<body>
+
 <!-- Navigation -->
 {% block navBar %}
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -73,16 +73,14 @@
                 </div>
             </div>
         </div>
-    </div>
 </header>
+
 <div class="container">
     {% block body %}{% endblock %}
-</div>
-{% block javascripts %}{% endblock %}
-</body>
 
-{% block footer %}
-    <footer>
+    {% block javascripts %}{% endblock %}
+</div>
+{% block footer %}<footer>
         <div class="col-md-12 social-icons">
             <div class="row">
                 <div class="col-12">
@@ -113,7 +111,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+</footer>
 {% endblock %}
 
 <!-- Bootstrap core JavaScript -->
@@ -131,4 +129,6 @@
 <!-- Custom scripts for this template -->
 <script src="/js/clean-blog.js"></script>
 
+
+</body>
 </html>
