--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -26,12 +26,12 @@
        <hr>
                 {% endif %}
             {% endfor %}
-                    <div class="offset-2 col-md-4 "></div>
+                    <div class="col-md-4">
                     {# fonction range(a, b) qui crée un tableau d'intervalle d'éléments depuis start to end #}
                     {% for pageNumber in range(1, numberOfPage) %}
-                        <p{% if pageNumber == page %} class="active"{% endif %}>
+                        <span{% if pageNumber == page %} class="active"{% endif %}>
                             <a href="{{ path('home_index')}}?page={{ pageNumber }}">[  {{ pageNumber }}  ]</a>
-                        </p>
+                        </span>
                     {% endfor %}
                     </div>
 
